force-app/main/default/objects/Opportunity/fields/Advance_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment_Mode__c</fullName>
    <label>Advance Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>Online Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>