force-app/main/default/objects/Opportunity/fields/Advance_Received__c.field-meta.xml
<CustomField>
    <fullName>Advance_Received__c</fullName>
    <label>Advance Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>