force-app/main/default/objects/Opportunity/fields/Buisness_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Buisness_Vertical__c</fullName>
    <label>Business Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Vertical</valueSetName>
    </valueSet>
</CustomField>