force-app/main/default/objects/Opportunity/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <type>Lookup</type>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Opportunities_Custom</relationshipName>
    <relationshipLabel>Opportunities</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>