force-app/main/default/objects/Opportunity/fields/Cash_Document__c.field-meta.xml
<CustomField>
    <fullName>Cash_Document__c</fullName>
    <label>Cash Document</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>