force-app/main/default/objects/Opportunity/fields/Cash_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Cash_Uploaded__c</fullName>
    <label>Cash Uploaded</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>