force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Our price very high &amp; could not match</fullName>
            </value>
            <value>
                <fullName>Features / Product not matching/missing</fullName>
            </value>
            <value>
                <fullName>Customer did not have funds/funding</fullName>
            </value>
            <value>
                <fullName>Our response was delayed</fullName>
            </value>
            <value>
                <fullName>Demo was a failure</fullName>
            </value>
            <value>
                <fullName>Competitor IB &amp; strong relationship</fullName>
            </value>
            <value>
                <fullName>Multi-product deal and we could not compile full portfolio</fullName>
            </value>
            <value>
                <fullName>Customer past experience was poor - service/sales</fullName>
            </value>
            <value>
                <fullName>Order not lost - delayed (Site readiness, funding etc.)</fullName>
            </value>
            <value>
                <fullName>Open Order, No Money Given</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>