force-app/main/default/objects/Opportunity/fields/Country_Code_Phone__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_Phone__c</fullName>
    <label>Country Code (Phone)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>