force-app/main/default/objects/Opportunity/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Semi-Government</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>