force-app/main/default/objects/Opportunity/fields/Customer_Code_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code_Mobile__c</fullName>
    <label>Country Code (Mobile)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>