force-app/main/default/objects/Opportunity/fields/DD_Document__c.field-meta.xml
<CustomField>
    <fullName>DD_Document__c</fullName>
    <label>DD Uploaded</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>