force-app/main/default/objects/Opportunity/fields/DD_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>DD_Uploaded__c</fullName>
    <label>DD Uploaded</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>