force-app/main/default/objects/Opportunity/fields/Hospital_Size_Bed__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Size_Bed__c</fullName>
    <label>Hospital Size (Bed)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>