force-app/main/default/objects/Opportunity/fields/Next_Step_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Action__c</fullName>
    <label>Next Step Action</label>
    <type>Date</type>
</CustomField>