force-app/main/default/objects/Opportunity/fields/No_of_Units__c.field-meta.xml
<CustomField>
    <fullName>No_of_Units__c</fullName>
    <label>No of Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>