force-app/main/default/objects/Opportunity/fields/Opportunity_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Auto_Number__c</fullName>
    <label>Opportunity ID</label>
    <type>Text</type>
    <length>20</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>