force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>Dealer Sales</fullName>
            </value>
            <value>
                <fullName>Rentals</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Revenue Sharing</fullName>
            </value>
            <value>
                <fullName>PPP Model</fullName>
            </value>
            <value>
                <fullName>One Time Customer - Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>