force-app/main/default/objects/Opportunity/fields/PO_Document__c.field-meta.xml
<CustomField>
    <fullName>PO_Document__c</fullName>
    <label>PO Uploaded</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>