force-app/main/default/objects/Opportunity/fields/PO_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>PO_Uploaded__c</fullName>
    <label>PO Uploaded</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>