force-app/main/default/objects/Opportunity/fields/PO_WO_Signed_Quotation__c.field-meta.xml
<CustomField>
    <fullName>PO_WO_Signed_Quotation__c</fullName>
    <label>PO/WO/Signed Quotation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>