force-app/main/default/objects/Opportunity/fields/Primary_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Person__c</fullName>
    <label>Primary Contact Person</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <relationshipLabel>Opportunities</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>