force-app/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>