force-app/main/default/objects/Opportunity/fields/Requirement_Details__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Details__c</fullName>
    <label>Requirement Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>