force-app/main/default/objects/Opportunity/fields/UPI_Document__c.field-meta.xml
<CustomField>
    <fullName>UPI_Document__c</fullName>
    <label>UPI Document</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>