force-app/main/default/objects/Opportunity/fields/UPI_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>UPI_Uploaded__c</fullName>
    <label>UPI Uploaded</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>