force-app/main/default/objects/Opportunity/fields/WO_Document__c.field-meta.xml
<CustomField>
    <fullName>WO_Document__c</fullName>
    <label>WO Document</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>