force-app/main/default/objects/Opportunity/fields/WO_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>WO_Uploaded__c</fullName>
    <label>WO Uploaded</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>