force-app/main/default/objects/Opportunity/validationRules/Advance_Paid_Next_Payment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Advance_Paid_Next_Payment_Date</fullName>
    <active>true</active>
    <description>Next Payment Date is mandatory when stage is Advance Paid.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, 'Advance Paid'),
    ISBLANK(Next_Payment_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Next_Payment_Date__c</errorDisplayField>
    <errorMessage>Next Payment Date is mandatory when the stage is Advance Paid.</errorMessage>
</ValidationRule>