force-app/main/default/objects/Opportunity/validationRules/Close_Date_Mandatory_On_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Mandatory_On_Close</fullName>
    <active>true</active>
    <description>Close Date is mandatory when stage is Closed Won or Closed Lost.</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, 'Closed Won'),
        ISPICKVAL(StageName, 'Closed Lost')
    ),
    ISBLANK(CloseDate)
)</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Close Date is mandatory when the Opportunity is Closed Won or Closed Lost.</errorMessage>
</ValidationRule>