force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Requires_Reason</fullName>
    <active>true</active>
    <description>Requires a Lost Reason when Opportunity stage is Closed Lost.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, 'Closed Lost'),
    ISPICKVAL(Closed_Lost_Reason__c, '')
)</errorConditionFormula>
    <errorDisplayField>Closed_Lost_Reason__c</errorDisplayField>
    <errorMessage>Closed Lost Reason is required when the stage is Closed Lost.</errorMessage>
</ValidationRule>