force-app/main/default/objects/Opportunity/validationRules/Closed_Won_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Mandatory_Fields</fullName>
    <active>true</active>
    <description>Requires PO/WO/Signed Quotation, Advance Received, and Advance Payment Mode when stage is Closed Won.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, 'Closed Won'),
    OR(
        ISPICKVAL(PO_WO_Signed_Quotation__c, ''),
        ISPICKVAL(Advance_Received__c, ''),
        ISPICKVAL(Advance_Payment_Mode__c, ''),
        ISPICKVAL(Advance_Realized__c, '')
    )
)</errorConditionFormula>
    <errorMessage>PO/WO/Signed Quotation, Advance Received, Advance Payment Mode, and Advance Realized are all required when marking an Opportunity as Closed Won.</errorMessage>
</ValidationRule>