force-app/main/default/objects/Opportunity/validationRules/Customer_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Mandatory</fullName>
    <active>true</active>
    <description>Ensures every Opportunity is linked to a Customer (Account).</description>
    <errorConditionFormula>ISBLANK(AccountId)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Customer (Account) is mandatory for an Opportunity.</errorMessage>
</ValidationRule>