force-app/main/default/objects/Opportunity/validationRules/Demo_Mandatory_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Demo_Mandatory_Contact</fullName>
    <active>true</active>
    <description>Email and Phone are mandatory from Demo stage onwards.</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, 'Demo'),
        ISPICKVAL(StageName, 'Negotiation'),
        ISPICKVAL(StageName, 'Quote Acceptance'),
        ISPICKVAL(StageName, 'Funds (Negotiation)'),
        ISPICKVAL(StageName, 'Advance Paid'),
        ISPICKVAL(StageName, 'Closed Won')
    ),
    OR(
        ISBLANK(Email__c),
        ISBLANK(Phone__c)
    )
)</errorConditionFormula>
    <errorMessage>Email and Phone are required from the Demo stage onwards.</errorMessage>
</ValidationRule>