force-app/main/default/objects/Opportunity/validationRules/Funds_Negotiation_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Funds_Negotiation_Mandatory_Fields</fullName>
    <active>true</active>
    <description>PO/WO/Signed Quotation is mandatory from Funds (Negotiation) stage onwards.</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, 'Funds (Negotiation)'),
        ISPICKVAL(StageName, 'Advance Paid'),
        ISPICKVAL(StageName, 'Closed Won')
    ),
    ISPICKVAL(PO_WO_Signed_Quotation__c, '')
)</errorConditionFormula>
    <errorDisplayField>PO_WO_Signed_Quotation__c</errorDisplayField>
    <errorMessage>PO/WO/Signed Quotation is required from the Funds (Negotiation) stage onwards.</errorMessage>
</ValidationRule>