force-app/main/default/objects/Opportunity/validationRules/Prevent_Reopen_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Reopen_Closed</fullName>
    <active>true</active>
    <description>Prevents reopening a Closed Won or Closed Lost opportunity unless System Administrator.</description>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    NOT($Profile.Name = 'System Administrator'),
    OR(
        ISPICKVAL(PRIORVALUE(StageName), 'Closed Won'),
        ISPICKVAL(PRIORVALUE(StageName), 'Closed Lost')
    )
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Closed Opportunities cannot be reopened. Please contact your System Administrator.</errorMessage>
</ValidationRule>