force-app/main/default/objects/Opportunity/validationRules/Proposal_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Proposal_Mandatory_Fields</fullName>
    <active>true</active>
    <description>Product and Opportunity Type are mandatory when stage is Proposal or beyond.</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, 'Proposal'),
        ISPICKVAL(StageName, 'Demo'),
        ISPICKVAL(StageName, 'Negotiation'),
        ISPICKVAL(StageName, 'Quote Acceptance'),
        ISPICKVAL(StageName, 'Funds (Negotiation)'),
        ISPICKVAL(StageName, 'Advance Paid'),
        ISPICKVAL(StageName, 'Closed Won')
    ),
    OR(
        ISBLANK(Product__c),
        ISPICKVAL(Opportunity_Type__c, '')
    )
)</errorConditionFormula>
    <errorMessage>Product and Opportunity Type are required from the Proposal stage onwards.</errorMessage>
</ValidationRule>