force-app/main/default/objects/Opportunity/validationRules/Quote_Acceptance_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Acceptance_Mandatory_Fields</fullName>
    <active>true</active>
    <description>Quote Date and Quote Amount are mandatory from Quote Acceptance stage onwards.</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, 'Quote Acceptance'),
        ISPICKVAL(StageName, 'Funds (Negotiation)'),
        ISPICKVAL(StageName, 'Advance Paid'),
        ISPICKVAL(StageName, 'Closed Won')
    ),
    OR(
        ISBLANK(Quote_Date__c),
        ISBLANK(Quote_Amount__c)
    )
)</errorConditionFormula>
    <errorMessage>Quote Date and Quote Amount are required from the Quote Acceptance stage onwards.</errorMessage>
</ValidationRule>